--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: atialiased;
+}
+
+body {
+    @apply bg-gray-900 text-gray-100
+}
